cabal-version:      3.0
name:               rootseeker
version:            0.1.0.0
license:            MIT
author:             rootseeker team
maintainer:         neilkamath@berkeley.edu
homepage:           https://github.com/rootseeker/rootseeker
bug-reports:        https://github.com/rootseeker/rootseeker/issues
synopsis:           A Language-Agnostic RCA Engine
description:        A CLI + API tool that ingests logs, traces, or structured error events and uses a rule engine + dependency graph analysis to suggest likely root causes.
category:           System, Analysis
build-depends:      base ^>=4.17.0.0
default-language:   Haskell2010
default-extensions: OverloadedStrings
                    DeriveGeneric
                    DerivingStrategies
                    GeneralizedNewtypeDeriving
                    RecordWildCards
                    TypeApplications

common shared-deps
    build-depends:
        base ^>=4.16.0.0,
        aeson ^>=2.0.0,
        text ^>=2.0.0,
        bytestring ^>=0.11.0,
        time ^>=1.12.0,
        containers ^>=0.6.0,
        vector ^>=0.13.0,
        lens ^>=5.2.0,
        megaparsec ^>=9.3.0,
        mtl ^>=2.3.0,
        transformers ^>=0.6.0,
        exceptions ^>=0.10.0,
        katip ^>=0.8.0

library rootseeker-core
    import:          shared-deps
    hs-source-dirs:  src/core
    exposed-modules:
        RootSeeker.Core
        RootSeeker.Core.Types
        RootSeeker.Core.Parser
        RootSeeker.Core.RuleEngine
        RootSeeker.Core.Graph
        RootSeeker.Core.Analysis
        RootSeeker.Core.Timeline
        RootSeeker.Core.Events
    build-depends:
        fgl ^>=6.3.0,
        algebraic-graphs ^>=0.6.0,
        attoparsec ^>=0.14.0,
        yaml ^>=0.11.0,
        scientific ^>=0.3.0,
        uuid ^>=1.3.0

library rootseeker-dsl
    import:          shared-deps
    hs-source-dirs:  src/dsl
    exposed-modules:
        RootSeeker.DSL
        RootSeeker.DSL.Parser
        RootSeeker.DSL.Evaluator
        RootSeeker.DSL.Types
    build-depends:
        rootseeker-core,
        template-haskell ^>=2.19.0,
        prettyprinter ^>=1.7.0

executable rootseeker-cli
    import:          shared-deps
    hs-source-dirs:  src/cli
    main-is:         Main.hs
    build-depends:
        rootseeker-core,
        rootseeker-dsl,
        optparse-applicative ^>=0.17.0,
        ansi-terminal ^>=0.11.0,
        brick ^>=1.0.0,
        vty ^>=5.35.0,
        directory ^>=1.3.0,
        filepath ^>=1.4.0

executable rootseeker-api
    import:          shared-deps
    hs-source-dirs:  src/api
    main-is:         Main.hs
    build-depends:
        rootseeker-core,
        rootseeker-dsl,
        servant ^>=0.19.0,
        servant-server ^>=0.19.0,
        warp ^>=3.4.0,
        http-types ^>=0.12.0,
        wai ^>=3.2.0,
        wai-cors ^>=0.5.0

library rootseeker-web
    import:          shared-deps
    hs-source-dirs:  src/web
    exposed-modules:
        RootSeeker.Web
        RootSeeker.Web.Dashboard
        RootSeeker.Web.Templates
    build-depends:
        rootseeker-core,
        rootseeker-dsl,
        lucid ^>=2.11.0,
        blaze-html ^>=0.9.0,
        blaze-markup ^>=0.8.0

test-suite rootseeker-tests
    import:          shared-deps
    type:            exitcode-stdio-1.0
    hs-source-dirs:  tests
    main-is:         Spec.hs
    build-depends:
        rootseeker-core,
        rootseeker-dsl,
        hspec ^>=2.10.0,
        QuickCheck ^>=2.14.0,
        hspec-megaparsec ^>=2.2.0
    other-modules:
        RootSeeker.CoreSpec
        RootSeeker.DSLSpec
        RootSeeker.ParserSpec
    ghc-options:     -threaded -rtsopts -with-rtsopts=-N

benchmark rootseeker-bench
    import:          shared-deps
    type:            exitcode-stdio-1.0
    hs-source-dirs:  bench
    main-is:         Main.hs
    build-depends:
        rootseeker-core,
        rootseeker-dsl,
        criterion ^>=1.6.0 